--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@
 .info-three{
     color: #070211;
     text-align: center;
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
@@ -100,6 +100,7 @@
 }
 
 .part-three{
+    position: relative;
     margin: auto;
     width: 1320px;
     height: 600px;
@@ -109,10 +110,43 @@
 }
 
 .photo-one{
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    filter: brightness(70%);
 }
 
 .text-one{
+    position: absolute;
+    display: inline-block;
+    bottom: 50%;
+    color: #FFF;
+    font-family: 'Merriweather', serif;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 88px; /* 137.5% */
+    letter-spacing: 7.04px;
+    margin-left: 126px;
+    margin-right: 552px;
+}
+
+.text-two{
+    position: absolute;
+    display: inline-block;
+    bottom: 20%;
+    color: rgba(255, 255, 255, 0.80);
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin: 326px 497px 214px 126px;
     
 }
+
+
+
+
+
+
+
+
