--- a/style.css
+++ b/style.css
@@ -140,7 +140,21 @@
     font-weight: 400;
     line-height: 30px;
     margin: 326px 497px 214px 126px;
-    
+
+}
+
+.text-three{
+    position: absolute;
+    display: inline-block;
+    bottom: 20%;
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    margin: 434px 1059px 142px 158px;
 }
 
 
