--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 .banner-intro{
     position: absolute;
   display: inline-block;
-  position: absolute;
   top: 40%; 
   left: 50%;
   transform: translate(-50%, -50%); 
@@ -240,4 +239,39 @@
     margin-right: 24px;
 }
 
+.mail{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    margin-left: 725px;
+    margin-right: 725px;
+    padding-left: 155px;
+    
+}
 
+.ek{
+    color: #070211;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    padding-top: 390px;
+    margin-left: 404px;
+    margin-right: 405px;
+
+}
+
+.do{
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+}
